round out discussion of link between wordmark depletion and increasing high-code marks; add logit regression with highcode as outcome variable

--- a/the_new_trademark_complexity.tex
+++ b/the_new_trademark_complexity.tex
@@ -257,9 +257,7 @@ Over the course of the time period examined here, the USPTO has made several cha
 
 The USPTO has also made procedural changes that have likely affected the consistency of coding quality over time. In late 2005, the USPTO began informing applicants of any design search codes assigned to their proposed marks and soliciting applicants' input on the assigned codes, even though the ultimate authority to determine the applicable codes rests with the USPTO.\footnote{\label{supra27} Notice of the Removal of the Paper Search Collection of Registered Marks That Include Design Elements from Trademark Search Library in Arlington, VA, 72 Fed. Reg. 35429, 35431 (June 28, 2007); Request for Comments on Removal of Paper Search Collection of Marks That Include Design Elements, \textit{supra} note~\ref{supra14}, at 36067.} Then, in mid-2007, the USPTO began soliciting the same input from all mark owners with active registrations that had visual elements.\footnote{In some cases, the USPTO did so only after first reviewing those active registrations and adopting self-sourced corrections to those registrations' codes, subject to any input from the mark owner. Coding of Design Marks in Registrations, \textit{supra} note~\ref{supra10}, at 81588.} Further, in 2008, the USPTO revised the trademark application regulations to require applicants to submit a description of any proposed mark that was not in plain text. The USPTO's logic was that being able to consult such descriptions would permit its coders to improve the accuracy of the design search codes assigned to proposed marks with visual elements.\footnote{Changes in the Requirement for a Description of the Mark in Trademark Applications, 73 Fed. Reg. 13780 (Mar. 14, 2008); Changes in the Requirement for a Description of the Mark in Trademark Applications, 72 Fed. Reg. 60609 (Oct. 25, 2007).}
 
-These procedural changes are safeguards. In the abstract, they don't necessarily have to affect the codes assigned to applications. Indeed, if the USPTO coded with perfect accuracy and had applied the January 2007 code changes to all applications that were active at that time or later, then these procedural changes would not have any additional effect on the design search codes assigned to any application. However, we know the USPTO does not code with perfect accuracy. These procedural changes thus strongly suggest that the quality of the design search codes for any application that was active as of late 2005 or later will be better than the quality of the design search codes for any comparable earlier application that was inactive as of late 2005.
-
-More generally, as discussed further in Section~\ref{sec:2}.\ref{subsec:2B}, these procedural changes point to potential endogeneity in my empirical analysis. As noted above, the reason the USPTO began dedicating increased resources to design search coding during 2005-2008 appears to have been suggestions that its design search coding \textit{often omitted relevant codes}. Thus, notwithstanding the USPTO's recoding of pre-2005 applications, it is possible that increases in the number of codes assigned to each mark since 2005 have resulted from an increase in granularity and attention to detail in the USPTO's coding practices, as opposed to changes in the visual elements of the coded marks themselves. This account does not straightforwardly explain the increase in applications with a high number of codes before 2005, seems somewhat implausible where a mark has an especially high number of codes (e.g., more than 15), and runs up against the robustness checks I include at the end of Section~\ref{sec:2}.\ref{subsec:2B}. However, this account points to the important reality that the USPTO is an evolving institution, and this study cannot fully account for diffuse or practically unobservable changes in USPTO practice over time.
+These procedural changes are safeguards. In the abstract, they don't necessarily have to affect the codes assigned to applications. Indeed, if the USPTO coded with perfect accuracy and had applied the January 2007 code changes to all applications that were active at that time or later, then these procedural changes would not have any additional effect on the design search codes assigned to any application. However, we know the USPTO does not code with perfect accuracy. These procedural changes thus strongly suggest that the quality of the design search codes for any application that was active as of late 2005 or later will be better than the quality of the design search codes for any comparable earlier application that was inactive as of late 2005. Indeed, as discussed further in Section~\ref{sec:2}.\ref{subsec:2B}, these procedural changes could suggest endogeneity in my empirical analysis on the theory that USPTO coders have simply become more attentive to applications' visual details over time, although, as I explain in that Section, that theory also fails to account for several aspects of the data.
 
 \end{enumerate}
 
@@ -440,7 +438,7 @@ The subset of codes I've termed ``basic'' is again helpful in understanding thes
 
 These are generalizations, of course. Many applications buck this trend: they are for complex logos that are composed of geometric shapes, or they are for a product shape that includes human or animal figures. But, overall, we are seeing more businesses apply for, on the one hand, designs that are effectively logos with a high number of visual elements and, on the other, designs that are highly specific and detailed agglomerations of shapes associated with product features, many of which reach beyond the realm of traditional logos. The balance of this Part seeks to answer why.
 
-\subsubsection{Inferential Statistics}\label{subsubsec:2B2}
+\subsubsection{Inferential Statistics and Limitations}\label{subsubsec:2B2}
 
 At first glance, one might interpret the rise of high-code applications as merely one facet of a broader uptick in filings for nontraditional marks—whether those marks consist of visual elements, sound, scent, or something else. Indeed, previous empirical studies on trademark prosecution have shown that applications for ``nontraditional'' (i.e., nonverbal) marks have increased in recent decades, both at the USPTO and at some of its counterparts in other countries.\footnote{\textit{See} Carolina Castaldi, \textit{The Economics and Management of Non-Traditional Trademarks}, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 257, 265 fig.13.1; \textit{Sound Marks}, \textit{supra} note~\ref{supra23}, at 2397 fig.I; \textit{see also} Mitchell Adams \& Amanda Scardamaglia, \textit{Non-Traditional Trademarks: An Empirical Study}, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 37, 45 fig.2.1.} In particular, applications for marks composed of visual elements—and, specifically, applications for marks consisting of color alone—have increased at the USPTO when measured in absolute numbers of applications per year, consistent with the data shown in Figure~\ref{fig:2}.\footnote{\textit{Owning Colors}, \textit{supra} note~\ref{supra23}, at 2539–40 figs.XI, XII, XIII. With respect to marks consisting of color alone, this increase may in part be due to the U.S. Supreme Court's 1995 decision in \textit{Qualitex Co. v. Jacobson Products Co.}, which held that a single color could be a trademark, as long as it had acquired distinctiveness. \textit{See id.}} Similarly, many have observed in qualitative terms that nontraditional marks consisting of highly specific trade dress—e.g., the shape of a handbag—are increasingly common, particularly among luxury brands.\footnote{Irene Calboli \& Martin Senftleben, Introduction, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 1; Irene Calboli, \textit{Chocolate, Fashion, Toys and Cabs: The Misunderstood Distinctiveness of Non-Traditional Trademarks}, 49 \textsc{Int'l Rev of Intell. Prop. \& Competition L.} 1 (2018).}  But, at least at the USPTO, the increase in absolute numbers of nontraditional marks is more a symptom of ballooning numbers of trademark filings in general and less an indicator of a trend unique to nontraditional marks. In fact, the share of nontraditional applications has \emph{decreased} if we account for the broader increase in applications for all marks, including word marks. In contrast, as shown in Figure~\ref{fig:6}, the share of high-code applications has increased, even accounting for the broader increase in all applications. Thus, visually complex nonword marks are following a different trajectory from nontraditional marks in general.
 
@@ -456,7 +454,7 @@ where $P$ is the probability that the application was approved, $highcode_i$ is 
 
 \input{table_1.tex} \par
 
-\noindent In the table above, the ``estimate'' value of n indicates that, holding everything else constant, having more than five design search codes increases an application's odds of USPTO approval by about $e^[0.1462]-1 \approx [16]\%$. This increase is highly statistically significant (with a p-value of 0.000), although the absolute percentage change ($\sim15\%$) is not overwhelming. However, that percentage can be critical in the right context. Imagine an application has 9 to 10 odds of approval, representing roughly a 47\% probability of approval. Increasing those odds by 15\%—resulting in odds of 10.35 to 10—increases its probability of approval to 51\%. Given these results, it at least plausible that the recent increase in high-code applications represents a strategy by applicants to increase their odds of approval and registration. 
+\noindent In the table above, the coefficient value of $highcode$ indicates that, holding everything else constant, having more than five design search codes increases an application's odds of USPTO approval by about $e^[0.146]-1 \approx [16]\%$. This increase is highly statistically significant (with a p-value of 0.000), although the absolute percentage change ($\sim16\%$) is not overwhelming. However, that percentage can be critical in the right context. Imagine an application has 9 to 10 odds of approval, representing roughly a 47\% probability of approval. Increasing those odds by 16\%—resulting in odds of 10.44 to 10—increases its probability of approval to 51\%. Given these results, it at least plausible that the recent increase in high-code applications represents a strategy by applicants to increase their odds of approval and registration. 
 
 But this strategy doesn't explain everything. \textit{Seabrook} was decided in 1977, about a decade before the beginning of the time period examined in my empirical analysis. It doesn't take much trial-and-error to figure out that (1) \textit{Seabrook} effectively says that unusual nonword marks are likelier to be registered, and (2) one way to make a mark unusual is to add more things to that mark. Thus, one might expect that a strategy of packing visual elements into a mark would take off as soon as a few applicants realized it worked. And that strategy would then remain popular—that is, applicants would employ that strategy at roughly consistent rates—as long as the law remains the same.\footnote{Somewhat analogously, consider that there were pronounced increases (1) in applications for color marks after the Supreme Court's decision in \textit{Qualitex}, which held that colors could be marks upon a showing of secondary meaning, and (2) in LGBTQ+-oriented applications in the years immediately following the Supreme Court's decision in \textit{Matal v. Tam}, which struck down the Lanham Act's prior prohibition on the registration of ``disparag[ing]'' marks. \textit{Owning Colors}, \textit{supra} note~\ref{surpa23}, at [X]; Michael Goodyear, \textit{Queer Trademarks}, 2024 \textsc{U. Ill. L. Rev.} 163.} But that's not what we see at all. Instead, Figure~\ref{fig:6} shows that marks with the highest number of design search codes seem, first, to moderately \textit{decrease} as a percentage of total applications during the late '80s and early '90s, after which they pick up substantially. Although it's possible that this is the natural pattern by which applicants adopted a visual element–packing strategy, it seems likelier that other factors are at play.
 
@@ -466,8 +464,8 @@ Context strongly suggests one such factor is the dramatic increase in total numb
 
 \begin{figure}[H]
 \centering
-\input{./graphics/figure_8.tex}
-\caption{\label{fig:8} Total applications filed at the USPTO (\textbf{\color{oxfordblue}left axes}) and share of those applications that are nonword with $>10$ and $>15$ codes (\textbf{\color{seafoam}right axes}) (1986 - 2023)}
+\input{./graphics/figure_7.tex}
+\caption{\label{fig:7} Total applications filed at the USPTO (\textbf{\color{oxfordblue}left axes}) and share of those applications that are nonword with $>10$ and $>15$ codes (\textbf{\color{seafoam}right axes}) (1986 - 2023)}
 \end{figure}
 
 As the next Section discusses further, one compelling way to understand this pattern is as the result of a fundamental shift in the branding environment—and, indeed, in the broader aesthetic environment. In particular, qualitative accounts of branding trends in recent years suggest that, as ever-growing numbers of word marks have saturated trademarks' linguistic territory, business have come to focus more on nonverbal branding elements as a way to distinguish themselves. In other words, as less and less of the domain of words is available to be claimed as a mark, businesses' focus on creating unique, memorable trademarks may intensifying within the domain of the visual, leading to a greater emphasis on claiming specific images, shapes, and patterns as marks.
@@ -476,14 +474,23 @@ It is not straightforward, however, to test this causal thesis. The yearly numbe
 
 Nonetheless, the data provide clues that, while not probative, suggest that the rise in high-code marks is related to the pronounced increase in word-mark filings. In particular, we can capitalize on the fact that desirable marks are scarcer in certain sectors of the economy (as represented by the international classes of goods/services the USPTO uses to categorize marks) than others. Among those sectors are the following ``important classes experiencing especially severe depletion: Class 9 (electronic goods), Class 25 (apparel goods), Class 35 (general business administration services), Class 41 (education, entertainment, and cultural and sporting activities services), and Class 42 (computer-related services).'' If word-mark depletion were driving the increase in high-code marks, we might expect that high-code marks have become more frequent in these sectors as businesses in them begin to expand into nonword marks.
 
-The data is consistent with that narrative—though, again, the availability of a causal inference remains limited. The top five filers of high-code marks are Disney Enterprises, Inc., Microsoft Corporation, Summit Entertainment, LLC, E. \&J. Gallo Winery (the largest wine producer in the world), and Societe des Produits Nestle S.A. Of all 42 international classes, the international class in which these firms filed the most applications (both word and nonword) from 1986 through 2023 was Class 9 (2,197 applications), with Class 41 in third place (1,488), Class 25 in seventh place (851), Class 42 in ninth place (639), and Class 35 in eleventh place (490). In other words, the firms that file the most high-code marks are also frequently filing applications in sectors of the economy where word marks are severely depleted—indeed, the sector in which they file the most applications is severely depleted.\footnote{For comparison, the top five filers across all types of filings—whether for non-word marks or otherwise—are Mattel, Inc., Disney Enterprises, Inc., Novartis AG, Glaxo Group Limited, and Hasbro, Inc. The international class in which these firms filed the most applications (both word and nonword) during the examined time period is, unsurprisingly, Class 28 (toys) (19,899 applications). Class 41 falls in third place (2,075 applications), Class 9 in fourth (1,868), Class 25 in sixth (11,64), Class 35 in sixteenth (391), and Class 42 in seventeenth (350).} However, these facts are less impressive given that Classes 9, 25, 35, 41, and 42 are simply the most popular five classes for \textit{all} applications, which could suggest that high-code marks would appear frequently in these sectors of the economy, regardless of whether word marks are particularly depleted in those sectors. Similarly, Classes 9, 25, 35, and 41 are all among the top ten classes in which the percentage change in number of high-code marks filed per year was greatest between 1986 and 2023, indicating that the gross numbers of high-code marks in those international classes grew faster than they did in more than three-quarters of the other classes.\footnote{With the twenty-seventh greatest percentage change between 1986 and 2023, Class 42 certainly breaks with the rest of the cadre of highly-depleted classes in this regard.} This is particularly remarkable given that only Classes 35 and 41 are in the top ten classes where the percentage change for \textit{all} applications was greatest between 1986 and 2023. Given that difference, one might that high-code marks have, over time, become more popular in sectors experiencing severe depletion.
+The data is consistent with that narrative—though, again, the availability of a causal inference remains limited. The top five filers of high-code marks are Disney Enterprises, Inc., Microsoft Corporation, Summit Entertainment, LLC, E. \&J. Gallo Winery (the largest wine producer in the world), and Societe des Produits Nestle S.A. Of all 42 international classes, the international class in which these firms filed the most applications (both word and nonword) from 1986 through 2023 was Class 9 (2,197 applications), with Class 41 in third place (1,488), Class 25 in seventh place (851), Class 42 in ninth place (639), and Class 35 in eleventh place (490). In other words, the firms that file the most high-code marks are also frequently filing applications in sectors of the economy where word marks are severely depleted—indeed, the sector in which they file the most applications is severely depleted.\footnote{For comparison, the top five filers across all types of filings—whether for non-word marks or otherwise—are Mattel, Inc., Disney Enterprises, Inc., Novartis AG, Glaxo Group Limited, and Hasbro, Inc. The international class in which these firms filed the most applications (both word and nonword) during the examined time period is, unsurprisingly, Class 28 (toys) (19,899 applications). Class 41 falls in third place (2,075 applications), Class 9 in fourth (1,868), Class 25 in sixth (11,64), Class 35 in sixteenth (391), and Class 42 in seventeenth (350).} However, these facts are less impressive given that Classes 9, 25, 35, 41, and 42 are simply the most popular five classes for \textit{all} applications (and for all nonword applications as a group), which could suggest that high-code marks would appear frequently in these sectors of the economy, regardless of whether word marks are particularly depleted in those sectors. Similarly, Classes 9, 25, 35, and 41 are all among the top ten classes in which the percentage change in number of high-code marks filed per year was greatest between 1986 and 2023, indicating that the gross numbers of high-code marks in those international classes grew faster than they did in more than three-quarters of the other classes.\footnote{With the twenty-seventh greatest percentage change between 1986 and 2023, Class 42 certainly breaks with the rest of the cadre of highly-depleted classes in this regard.} This is particularly remarkable given that only Classes 35 and 41 are in the top ten classes where the percentage change for \textit{all} applications was greatest between 1986 and 2023. Given that difference, one might that high-code marks have, over time, become more popular in sectors experiencing severe depletion. Indeed, though a full analysis of this phenomenon is beyond the scope of this article, it is possible that high-code marks could herald the onset of a similar depletion of \textit{nonword} marks in economic sectors with high trademark filing activity.\footnote{Consistent with the foregoing analysis, the codes most frequently assigned to all nonword applications are mostly basic codes in category 26 (the top three codes across all nonword marks are 26.01.21 (circles that are totally or partially shaded), 26.17.09 (curved lines, bands, or bars), and 26.17.01 (straight lines, bands, or bars)). The same goes for high-code applications (the top three codes across all high-code marks are 26.01.21 (circles that are totally or partially shaded), 26.17.01 (straight lines, bands, or bars), and 26.17.05 (horizontal lines, bands, or bars)). Further, the codes most frequently applied to nonword applications in Classes 9, 25, 35, 41, and 42 and the codes most frequently applied to high-code applications in those classes are overwhelmingly basic and overlap almost completely. This suggests that high-code applications—which, by definition, have more codes than the average application—could contribute to depletion or congestion of particular simple, nonrepresentational shapes, particularly in the most popular classes for nonword filings. However, given that two visual elements that share the same code may differ substantially, further research is needed to determine whether the mere \textit{concentration} of applications with particular design search codes signals that fewer of the shapes covered by such codes are available to applicants or that particular shapes covered by such codes are disproportionately used by applicants.}
 
+The difficulty of showing a causal relationship between increased word-mark filings and the advent of high-code marks points to a broader but similar limitation of this analysis. Namely, the increase in high-code applications (or, at least, in the proportion of such applications) may be endogenous to the USPTO's data, as opposed to the result of a change in visual marks themselves over time. As noted, public criticism of the USPTO's coding practices—in particular, the claim that the USPTO sometimes failed to assign all relevant codes—led to several quality control efforts at the USPTO between 2005 and 2007. One interpretation of the rise of high-code applications is that those more robust quality control efforts resulted in coders applying greater attention to detail in recent years, leading them to apply more codes per application than they previously might have. This account does not straightforwardly explain the increase in applications with a high number of codes before 2005, and—unless the USPTO's quality control measures are presumed to have become more effective over time—it does not explain the increase in applications with a high number of codes after 2005. This account also seems somewhat implausible where a mark has an especially high number of codes (e.g., more than 15), given that the USPTO's guidance limits the coding of immaterial details.\footnote{The USPTO's guidance instructs that ``[w]here a design element contains a nondistinctive component part, the entire design, and not the component part, is coded.''} In other words, mere focus on details cannot account for especially high numbers of codes.
 
+That said, the USPTO's quality control efforts presumably had some effect. Coders may have been likelier to assign the marginal code that they previously may not have assigned. Controlling for this effect at the level of each individual application (as opposed to controlling through fixed effects at the level of years or groups of years, as shown in Table 1) is difficult, because there are no variables in the data that directly measure how closely a coder scrutinizes a given application. Nor are there variables that measure how many significant visual elements were \textit{not} assigned codes. That is simply a judgment call. However, as a rough proxy for (over)attention to detail, we can control for the number of basic codes assigned to a given application. As discussed, basic codes generally correspond to simple, nonrepresentational shapes. More complex shapes are composed of such shapes. Thus, an examiner who is focusing on the details of the shapes in a mark may be likelier to assign more basic codes than an examiner who is not, because simple, nonrepresentational shapes are components—details—in more complex shapes.\footnote{Although this form of overcoding potentially conflicts with the USPTO's instructions against coding immaterial details, it is consistent with a broad reading of the USPTO's guidance that, ``[i]f there is doubt as to whether a particular design element should be coded, [coders should] code the design element in question.''} To test this theory, Figure~\ref{fig:8} plots the estimated effects during each five year period from 1987 onward, with 1986 as the referent. The left panel controls only for whether the application was filed with the assistance of an attorney or pro se. The right panel controls for applicant representation as well as number of basic codes.
 
+\begin{figure}[H]
+\centering
+\input{./graphics/figure_8.tex}
+\caption{\label{fig:8} Estimated effects of each five-year period from 1987 through 2023 on likelihood of a nonword application having $> 5$ codes}
+\end{figure}
+
+Of course, because basic codes are so frequently used (and may in some cases be the only codes assigned to an application), the effects shown in the right panel tend to underestimate any exogenous trend toward high-code applications. Moreover, given that both specifications above show a decreasing trend from 1986 through 2001 followed by an increasing trend from 2001 through 2021 (consistent with Figure~\ref{fig:6} and~\ref{fig:7}), one might argue that the data are consistent with an uptick in high-code applications just as the USPTO began its efforts to improve coding quality. Conversely, the existence of an upward trend—even between 2002 and 2021—when holding the number of basic codes constant could strongly suggest that increased attention to detail over time is not wholly responsible for the increase in high-code marks. To be sure, the USPTO is an evolving institution that demonstrably has not approached design coding with precisely the same methodology over the course of the 38 years examined here, and my analysis cannot fully account for diffuse or idiosyncratic changes in USPTO coding practice over time. In the absence of direct measurements of those changes, controlling for the number of basic codes minimally reinforces my analysis's assumption that the assignment of a high number of codes to an application is mostly due to the visual elements in the application, as opposed to institutional factors.
 
 \subsection{The New Trademark Complexity}\label{subsec:2C}
 
-In this context, we could view rising visual complexity as the flipside of a parallel phenomenon in the world of word marks: the recent increase in linguistically complex marks. Although this Article is the first to examine rising visual complexity in design search codes, rising linguistic complexity is already documented in the literature. And tellingly, just like visual complexity, linguistic complexity is linked to the growing number of trademarks overall.
+The plausible link between rising word-mark filings and increasing numbers of high-code marks points to a deeper substantive relationship between these two zones of trademark rights. In particular, we could view rising visual complexity as the flipside of a parallel phenomenon in the world of word marks: the recent increase in linguistically complex marks. Although this Article is the first to examine rising visual complexity in design search codes, rising linguistic complexity is already documented in the literature. And tellingly, just like visual complexity, linguistic complexity is linked to the growing number of trademarks overall.
 
 Through an analysis of, among other data, the same USPTO dataset I examine here, Barton Beebe and Jeanne Fromer have shown that a high proportion of words that would be desirable trademarks—namely, frequently-used English words, single-syllable words, and common surnames—are either already registered as marks or are confusingly similar to an already-registered mark.\footnote{Beebe \& Fromer, \textit{supra} note~\ref{supra4}, at 981.} This ``depletion'' of desirable marks has had two key effects. First, businesses are increasingly using similar marks where they can do so without creating confusion (e.g., one business uses YALE for higher education, another business uses YALE for door locks), a phenomenon Beebe and Fromer term trademark ``congestion.''\footnote{Beebe \& Fromer, \textit{supra} note~\ref{supra4}, at 1012–21; Gerhardt \& McClanahan, \textit{supra} note [X], at 586, 586 n.9.} Second—and more importantly for the present analysis—businesses are increasingly seeking to register trademarks that have more characters, syllables, and words in them.\footnote{Beebe \& Fromer, \textit{supra} note~\ref{supra4}, at 999–1003.} That is, the scarcity of desirable marks is pushing businesses toward increased ``trademark length, complexity, and bulkiness.''\footnote{\textit{Id.} at 999–1024.}  In particular, Beebe and Fromer show that, from 1985 through 2016, the average word count per mark has increased by about [0.3], the average syllable count per mark has increased by about [0.5], and the average character count per mark has increased by about [1.5].\footnote{[NTD: To confirm these figures with Barton.] \textit{Id. 1002}}
 
